Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
 <p>I built Song Blocks so my toddler could play music on the living room Sonos without <em>apparently</em> interacting with technology.</p>
 
-<p>12 wood blocks each contain two magnets and an NFC tag.  With a satisfying <em>clack!</em> a block magnetically attaches to the face of a drawer containing a Raspberry Pi computer and an NFC controller.  The Pi reads the NFC tag, tells the Sonos which song to play, and tweets the song title at <a href="https://twitter.com/songblocks">@songblocks</a>.</p>
+<p>12 wood blocks each contain magnets and an NFC tag.  With a satisfying <em>clack!</em> a block magnetically attaches to the face of a drawer containing a Raspberry Pi computer and an NFC controller.  The Pi reads the NFC tag, tells the Sonos which song to play, and tweets the song title at <a href="https://twitter.com/songblocks">@songblocks</a>.</p>
 
-<p>The primary design goal was to make the technology disappear completely; the final experience is organic, tactile and aural - and quite magical.  My son loves it.</p>
+<p>The primary design consideration was to make the technology disappear completely; the final experience is organic, tactile and aural - and quite magical.  My son loves it.</p>
 
 <p><img src="https://www.dropbox.com/s/2nmt56de2d6rmzk/sonos.JPG?dl=1" alt="Sonos"><br><img src="https://www.dropbox.com/s/thajeqv8gg4pt9g/drawer.JPG?dl=1" alt="drawer"></p>
 
