--- a/index.html
+++ b/index.html
@@ -49,12 +49,13 @@
         <h3>
 <a name="welcome-to-song-blocks" class="anchor" href="#welcome-to-song-blocks"><span class="octicon octicon-link"></span></a>Welcome to Song Blocks</h3>
 
-<p><strong>I built Song Blocks so my toddler could play music on the living room Sonos without <em>apparently</em> interacting with technology.</strong></p>
+<p><center><strong>I built Song Blocks so my toddler could play music on the living room Sonos without <em>apparently</em> interacting with technology.</strong></center></p>
 
 <p>12 wood blocks each contain magnets and an NFC tag.  With a satisfying <em>clack!</em> a block magnetically attaches to the face of a drawer containing a Raspberry Pi computer and an NFC controller.  The Pi reads the NFC tag, tells the Sonos which song to play, and tweets the song title at <a href="https://twitter.com/songblocks">@songblocks</a>.</p>
 
 <p>The primary design consideration was to make the technology disappear completely; the final experience is organic, tactile and aural - and quite magical.  My son loves it.</p>
-
+<br>
+<iframe width="560" height="315" src="//www.youtube.com/embed/fjroBkw3KII" frameborder="0" allowfullscreen></iframe>
 <p><img src="https://www.dropbox.com/s/2nmt56de2d6rmzk/sonos.JPG?dl=1" alt="Sonos"><br><img src="https://www.dropbox.com/s/thajeqv8gg4pt9g/drawer.JPG?dl=1" alt="drawer"></p>
 
 <h3>
