--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 <a name="technologies-used" class="anchor" href="#technologies-used"><span class="octicon octicon-link"></span></a>Technologies Used</h3>
 
 <ul>
-<li>Raspberry Pi</li>
-<li>NFC controller board</li>
+<li>Raspberry Pi Model B+</li>
+<li><a href="http://www.adafruit.com/product/364">This</a> NFC controller board</li>
 <li>NFC tags</li>
 <li>Rare-earth magnets</li>
-<li>A simple Python script (~100 lines) that I wrote, hosted on GitHub <a href="https://github.com/shawnrk/songblocks">here</a>
+<li>A simple Python script (~100 lines) that I wrote.  It's on GitHub <a href="https://github.com/shawnrk/songblocks">here</a>
 </li>
 <li>Open-source Python libs: <a href="https://github.com/SoCo/SoCo">SoCo</a> to talk to the Sonos, <a href="https://launchpad.net/nfcpy">nfcpy</a> to talk to the NFC controller, <a href="https://github.com/Mezgrman/TweetPony">TweetPony</a> to talk to Twitter</li>
 </ul><h3>
