--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
 </li>
 <li>Open-source Python libs: <a href="https://github.com/SoCo/SoCo">SoCo</a> to talk to the Sonos, <a href="https://launchpad.net/nfcpy">nfcpy</a> to talk to the NFC controller, <a href="https://github.com/Mezgrman/TweetPony">TweetPony</a> to talk to Twitter</li>
 </ul><h3>
-<a name="the-drawer" class="anchor" href="#the-drawer"><span class="octicon octicon-link"></span></a>The drawer</h3>
+<a name="the-drawer" class="anchor" href="#the-drawer"><span class="octicon octicon-link"></span></a>The Drawer</h3>
 
 <p>Cavities were routed out from the inside of the drawer face to place the magnets (they sit 3/16" below the outer surface).  The NFC controller board is taped to the inside of the drawer face.  The Raspberry Pi just sits in the drawer, with its power cord running out the back.  The four wires between the NFC controller and the Raspberry Pi connect UART Rx, Tx, +5v, and ground.  </p>
 
 <p><img src="https://www.dropbox.com/s/thsis3mgbukt754/inside.jpg?dl=1" alt="inside"></p>
 
 <h3>
-<a name="the-blocks" class="anchor" href="#the-blocks"><span class="octicon octicon-link"></span></a>The blocks</h3>
+<a name="the-blocks" class="anchor" href="#the-blocks"><span class="octicon octicon-link"></span></a>The Blocks</h3>
 
 <p>3/8" thick walnut boards were cut down to pieces measuring 1-1/2"x3-1/4" (two of these form each block).  Cavities were routed out for the NFC tag and magnets (they sit 3/16" below the outer surface).  Magnets were glued in.  The halves were then glued together and clamped.  </p>
 
@@ -97,7 +97,7 @@ Before and after the trimming, radiusing, and sanding:  </p>
 <p><img src="https://www.dropbox.com/s/7ny63nauakkqr4p/blocks.JPG?dl=1" alt="Blocks"></p>
 
 <h3>
-<a name="the-code" class="anchor" href="#the-code"><span class="octicon octicon-link"></span></a>The code</h3>
+<a name="the-code" class="anchor" href="#the-code"><span class="octicon octicon-link"></span></a>The Code</h3>
 
 <p>I haven't coded in well over a decade and this is my first Python project.  So it's ugly, but functional and pretty self-explanatory. The GitHub repo is <a href="https://github.com/shawnrk/songblocks">here</a>.</p>
       </section>
