--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <h3>
 <a name="welcome-to-song-blocks" class="anchor" href="#welcome-to-song-blocks"><span class="octicon octicon-link"></span></a>Welcome to Song Blocks</h3>
 
-<p><center><strong><a href="https://www.linkedin.com/in/shawnk">I</a> built Song Blocks so my toddler could play music on the living room Sonos without <em>apparently</em> interacting with technology</strong></center></p>
+<p><center><strong>I (<a href="https://www.linkedin.com/in/shawnk">Shawn</a>) built Song Blocks so my toddler could play music on the living room Sonos without <em>apparently</em> interacting with technology</strong></center></p>
 
 <p>12 wood blocks each contain magnets and an NFC tag.  With a satisfying <em>clack!</em> a block magnetically attaches to the face of a drawer containing a Raspberry Pi computer and an NFC controller.  The Pi reads the NFC tag, tells the Sonos which song to play, and tweets the song title at <a href="https://twitter.com/songblocks">@songblocks</a>.</p>
 
