--- a/index.html
+++ b/index.html
@@ -100,7 +100,13 @@ Before and after the trimming, radiusing, and sanding:  </p>
 <a name="the-code" class="anchor" href="#the-code"><span class="octicon octicon-link"></span></a>The Code</h3>
 
 <p>I haven't coded in well over a decade and this is my first Python project.  So it's ugly, but functional and pretty self-explanatory. The GitHub repo is <a href="https://github.com/shawnrk/songblocks">here</a>.</p>
-      </section>
+
+  
+<h3>
+<a name="conclusions" class="anchor" href="#conclusions"><span class="octicon octicon-link"></span></a>Conclusions</h3>
+<hr><p>This was a fun project combining design thinking, woodworking and technology.  It's given my little boy a way to participate in music listening and cultivate his own musical preferences.  He also gets to practice numbers and has learned the symbolic mapping of a number to a song.  This is his favorite "toy" right now, and I hope it stays that way for years to come.  Please feel free to leave your comments and questions below. <br>Thanks for visiting!</p>
+
+</section>
 <div id="disqus_thread"></div>
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
