--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Before and after the trimming, radiusing, and sanding:  </p>
   
 <h3>
 <a name="conclusions" class="anchor" href="#conclusions"><span class="octicon octicon-link"></span></a>Conclusions</h3>
-<p>This was a fun project combining design thinking, woodworking and technology.  It's given my little boy a way to participate in music listening and cultivate his own musical preferences.  He also gets to practice numbers and has learned the symbolic mapping of a number to a song.  This is his favorite "toy" right now, and I hope it stays that way for years to come.  Please feel free to leave your comments and questions below. <br>Thanks for visiting!</p>
+<p>This was a fun project combining design thinking, woodworking and technology.  It has given my little boy a way to participate in music listening and cultivate his own musical preferences.  He also gets to practice numbers and has learned the symbolic mapping of a number to a song.  This is his favorite "toy" right now, and I hope it stays that way for years to come.  Please feel free to leave your comments and questions below. <br>Thanks for visiting!</p>
 
 </section>
 <div id="disqus_thread"></div>
