--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
 <a name="technologies-used" class="anchor" href="#technologies-used"><span class="octicon octicon-link"></span></a>Technologies Used</h3>
 
 <ul>
-<li>Raspberry Pi Model B+</li>
+<li><a href="http://www.sonos.com/shop/products/play5">Sonos Play:5</a></li>
+<li><a href="http://www.raspberrypi.org/products/model-b-plus/">Raspberry Pi Model B+</a></li>
 <li><a href="http://www.adafruit.com/product/364">This</a> NFC controller board</li>
 <li>NFC tags</li>
 <li>Rare-earth magnets</li>
