--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
   </head>
 
   <body>
+    <div id="fb-root"></div>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.0";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
+  
     <a id="forkme_banner" href="https://github.com/shawnrk/songblocks">View on GitHub</a>
     <div class="shell">
 
@@ -50,10 +59,13 @@
 <a name="welcome-to-song-blocks" class="anchor" href="#welcome-to-song-blocks"><span class="octicon octicon-link"></span></a>Welcome to Song Blocks</h3>
 
 <p><center><strong>I (<a href="https://www.linkedin.com/in/shawnk">Shawn</a>) built Song Blocks so my toddler could play music on the living room Sonos without <em>apparently</em> interacting with technology</strong></center></p>
+
 <center><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://shawnrk.github.io/songblocks/" data-text="Check out the no-tech-high-tech Sonos controller!" data-via="shawnk" data-size="large" data-hashtags="songblocks">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></center>
-<p>12 wood blocks each contain magnets and an NFC tag.  With a satisfying <em>clack!</em> a block magnetically attaches to the face of a drawer containing a Raspberry Pi computer and an NFC controller.  The Pi reads the NFC tag, tells the Sonos which song to play, and tweets the song title at <a href="https://twitter.com/songblocks">@songblocks</a>.</p>
 
+<div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-width="100"></div>
+
+<p>12 wood blocks each contain magnets and an NFC tag.  With a satisfying <em>clack!</em> a block magnetically attaches to the face of a drawer containing a Raspberry Pi computer and an NFC controller.  The Pi reads the NFC tag, tells the Sonos which song to play, and tweets the song title at <a href="https://twitter.com/songblocks">@songblocks</a>.</p>
 <p>The primary design consideration was to make the technology disappear completely; the final experience is organic, tactile and aural - and quite magical.  My son loves it.</p>
 <br>
 <iframe width="560" height="315" src="//www.youtube.com/embed/fjroBkw3KII" frameborder="0" allowfullscreen></iframe>
