--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 <p><img src="https://www.dropbox.com/s/2nmt56de2d6rmzk/sonos.JPG?dl=1" alt="Sonos"><br><img src="https://www.dropbox.com/s/thajeqv8gg4pt9g/drawer.JPG?dl=1" alt="drawer"></p>
 
 <h3>
-<a name="technologies-used" class="anchor" href="#technologies-used"><span class="octicon octicon-link"></span></a>Technologies Used</h3>
+<a name="ingredients" class="anchor" href="#ingredients"><span class="octicon octicon-link"></span></a>Ingredients</h3>
 
 <ul>
 <li><a href="http://www.sonos.com/shop/products/play5">Sonos Play:5</a></li>
