--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 <p><center><strong>I (<a href="https://www.linkedin.com/in/shawnk">Shawn</a>) built Song Blocks so my toddler could play music on the living room Sonos without <em>apparently</em> interacting with technology</strong></center></p>
 
-<center><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://shawnrk.github.io/songblocks/" data-text="Check out the no-tech-high-tech Sonos controller!" data-via="shawnk" data-size="medium" data-hashtags="songblocks">Tweet</a>
+<center><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://shawnrk.github.io/songblocks/" data-text="Check out the no-tech-high-tech Sonos controller!" data-via="shawnk" data-size="medium">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></center>
 
 <center><div class="fb-share-button" data-href="http://shawnrk.github.io/songblocks/" data-layout=button_count data-width="80"></div></center>
