--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 <li><a href="http://www.adafruit.com/product/364">This</a> NFC controller board</li>
 <li>NFC tags</li>
 <li>Rare-earth magnets</li>
+<li>3/8" thick walnut plank</li>
 <li>A simple Python script (~100 lines) that I wrote.  It's on GitHub <a href="https://github.com/shawnrk/songblocks">here</a>
 </li>
 <li>Open-source Python libs: <a href="https://github.com/SoCo/SoCo">SoCo</a> to talk to the Sonos, <a href="https://launchpad.net/nfcpy">nfcpy</a> to talk to the NFC controller, <a href="https://github.com/Mezgrman/TweetPony">TweetPony</a> to talk to Twitter</li>
@@ -94,7 +95,7 @@
 <h3>
 <a name="the-blocks" class="anchor" href="#the-blocks"><span class="octicon octicon-link"></span></a>The Blocks</h3>
 
-<p>3/8" thick walnut boards were cut down to pieces measuring 1-1/2"x3-1/4" (two of these form each block).  Cavities were routed out for the NFC tag and magnets (they sit 3/16" below the outer surface).  Magnets were glued in.  The halves were then glued together and clamped.  </p>
+<p>A 3/8" thick walnut plank was cut down to pieces measuring 1-1/2"x3-1/4" (two of these form each block).  Cavities were routed out for the NFC tag and magnets (they sit 3/16" below the outer surface).  Magnets were glued in.  The halves were then glued together and clamped.  </p>
 
 <p><img src="https://www.dropbox.com/s/ivab56cmj4c9a6c/factory.JPG?dl=1" alt="Adding NFC tags and gluing in the magnets"><img src="https://www.dropbox.com/s/ullvmcmbyeu25km/press.JPG?dl=1" alt="Clamping"></p>
 
