--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h3>
 <a name="welcome-to-song-blocks" class="anchor" href="#welcome-to-song-blocks"><span class="octicon octicon-link"></span></a>Welcome to Song Blocks</h3>
 
-<p><center><strong>I (<a href="https://www.linkedin.com/in/shawnk">Shawn</a>) built Song Blocks so my toddler could play music on the living room Sonos without <em>apparently</em> interacting with technology</strong></center></p>
+<p><center><strong>I (<a href="https://www.linkedin.com/in/shawnk">Shawn Kahandaliyanage</a>) built Song Blocks so my toddler could play music on the living room Sonos without <em>apparently</em> interacting with technology</strong></center></p>
 
 <center><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://shawnrk.github.io/songblocks/" data-text="Check out the no-tech-high-tech Sonos controller!" data-via="shawnk" data-size="medium">Tweet</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></center>
