--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <p>The primary design consideration was to make the technology disappear completely; the final experience is organic, tactile and aural - and quite magical.  My son loves it.</p>
 <br>
 <iframe width="560" height="315" src="//www.youtube.com/embed/fjroBkw3KII?iv_load_policy=3;rel=0;autohide=1;showinfo=0" frameborder="0" allowfullscreen></iframe>
-<p><img src="https://raw.githubusercontent.com/shawnrk/songblocks/gh-pages/images/blocks.JPG" alt="Sonos"><br><img src="https://www.dropbox.com/s/56nc2kqd17sdpao/drawer.JPG?dl=1" alt="drawer"></p>
+<p><img src="https://raw.githubusercontent.com/shawnrk/songblocks/gh-pages/images/blocks.JPG" alt="Sonos"><br><img src="https://raw.githubusercontent.com/shawnrk/songblocks/gh-pages/images/drawer.JPG" alt="drawer"></p>
 
 <h3>
 <a name="ingredients" class="anchor" href="#ingredients"><span class="octicon octicon-link"></span></a>Ingredients</h3>
@@ -90,27 +90,27 @@
 
 <p>Cavities were routed out from the inside of the drawer face to place the magnets (they sit 3/16" below the outer surface).  The NFC controller board is taped to the inside of the drawer face.  The Raspberry Pi just sits in the drawer, with its power cord running out the back.  The four wires between the NFC controller and the Raspberry Pi connect UART Rx, Tx, +5v, and ground.  </p>
 
-<p><img src="https://www.dropbox.com/s/1v2wvmxivghiayl/inside.jpg?dl=1" alt="inside"></p>
+<p><img src="https://raw.githubusercontent.com/shawnrk/songblocks/gh-pages/images/inside.jpg" alt="inside"></p>
 
 <h3>
 <a name="the-blocks" class="anchor" href="#the-blocks"><span class="octicon octicon-link"></span></a>The Blocks</h3>
 
 <p>A 3/8" thick walnut plank was cut down to pieces measuring 1-1/2"x3-1/4" (two of these form each block).  Cavities were routed out for the NFC tag and magnets (they sit 3/16" below the outer surface).  Magnets were glued in.  The halves were then glued together and clamped.  </p>
 
-<p><img src="https://www.dropbox.com/s/6t1aazuys7yl2xw/factory.JPG?dl=1" alt="Adding NFC tags and gluing in the magnets"><img src="https://www.dropbox.com/s/zxns61869xvbqm0/press.JPG?dl=1" alt="Clamping"></p>
+<p><img src="https://raw.githubusercontent.com/shawnrk/songblocks/gh-pages/images/factory.JPG" alt="Adding NFC tags and gluing in the magnets"><img src="https://raw.githubusercontent.com/shawnrk/songblocks/gh-pages/images/press.JPG" alt="Clamping"></p>
 
 <hr><p>Each side was evened out by trimming off a very thin slice with a band saw.  The edges were given a 1/8" radius round-over with a router.  The sides and edges were sanded with 150 grit sandpaper. The seam between the halves was rendered nearly indiscernible.<br>
 Before and after the trimming, radiusing, and sanding:  </p>
 
-<p><img src="https://www.dropbox.com/s/ztnmo1skrucgdwt/squareround.JPG?dl=1" alt="Before &amp; After"><img src="https://www.dropbox.com/s/yi8zkyurhv2161f/squareround2.JPG?dl=1" alt="Before &amp; After 2"></p>
+<p><img src="https://raw.githubusercontent.com/shawnrk/songblocks/gh-pages/images/squareround.JPG" alt="Before &amp; After"><img src="https://raw.githubusercontent.com/shawnrk/songblocks/gh-pages/images/squareround2.JPG" alt="Before &amp; After 2"></p>
 
 <hr><p>The numbers were imprinted with an ink stamp set and then burned in with a soldering iron.  </p>
 
-<p><img src="https://www.dropbox.com/s/6jz4bdgnluycvqc/burn.JPG?dl=1" alt="Burn"></p>
+<p><img src="https://raw.githubusercontent.com/shawnrk/songblocks/gh-pages/images/burn.JPG" alt="Burn"></p>
 
 <hr><p>The wood has been left natural - no oil or stain.  Naked walnut is beautiful, wears well, and smells nice.  </p>
 
-<p><img src="https://www.dropbox.com/s/i3d6oyuihj54fdz/blocks.JPG?dl=1" alt="Blocks"></p>
+<p><img src="https://raw.githubusercontent.com/shawnrk/songblocks/gh-pages/images/blocks.JPG" alt="Blocks"></p>
 
 <h3>
 <a name="the-code" class="anchor" href="#the-code"><span class="octicon octicon-link"></span></a>The Code</h3>
